# sympy2cpp

./: CMakeLists.txt  Config.cmake.in  README  example.cpp  sympy2cpp.cpp  sympy2cpp.h
tests/: CMakeLists.txt  basic_tests.cpp  test_runner.cpp
